# codex-cli

./: .gitignore  pyproject.toml
codex_cli/: README.md  config.py
codex_cli/cli/: main.py
codex_cli/codex_cli/: __init__.py
codex_cli/modules/: code_analysis.py  interactive.py  search.py
